--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
 					<button id="btnClear" class="btn btn-sm btn-link" title="Clean data stored on browser"><i class="glyphicon glyphicon-erase"></i> Clean Data</button>					
 					<button id="btnUploadList" class="btn btn-sm btn-link" title="Upload Participants list as (.csv) file[name,img]"><i class="glyphicon glyphicon-user"></i> Upload</button>
 					<button id="btnDownloadReport" class="btn btn-sm btn-link" title="Download report (.txt) file"><i class="glyphicon glyphicon-save"></i> Download Report</button>
-					<a id="btnHelp" class="btn btn-sm btn-link" title="Help" href="help.html" target="_blank"><i class="glyphicon glyphicon-info-sign"></i> Help</a>
+					<a id="btnHelp" class="btn btn-sm btn-link" title="Help" href="https://github.com/manouriz/zoomex" target="_blank"><i class="glyphicon glyphicon-info-sign"></i> Help</a>
 					<button id="btnNewTab" class="btn btn-sm btn-link" title="Open in a new tab for a large view"><i class="glyphicon glyphicon-new-window"></i> New Window</button>					
 				</div>				
 			</li>
@@ -174,7 +174,16 @@
 			</li>
 		</ul>
 		<footer>
-			<a href="https://www.linkedin.com/in/manouriz/" target="_blank">© Manouriz</a>
+			<a class="btn btn-sm btn-link" title="Help" href="https://github.com/manouriz/zoomex" target="_blank">
+				<svg height="16" class="github" viewBox="0 0 16 16" version="1.1" width="16" aria-hidden="true">
+					<path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+				</svg>
+				Github Repository
+			</a>
+			 .
+			<a class="btn btn-sm btn-link" href="https://github.com/manouriz/zoomex/blob/main/README.md" target="_blank">Read me</a>
+			 .
+			<a class="btn btn-sm btn-link" href="mail:ma.nourizadeh@gmail.com" target="_blank">Developed by manouriz</a> 
 		</footer>
 		<div class="my-alert alert alert-info alert-dismissible">
 			<span></span>
